syntax = "proto3";
package relay;

option go_package="github.com/Abelova-Grupa/Mercypher-Backend/proto/relaypb";

service RelayService {
    rpc SendMessage(ChatMessage) returns (Status) {}
    rpc GetMessages(UserId) returns (stream ChatMessage) {}
    // premestanje dostavljenih bi trebalo da bude u Message service?
}

message ChatMessage {
  string message_id = 1; // Specijalno za Dervu
  string sender_id = 2;
  string recipient_id = 3;
  int64 timestamp = 4;
  string body = 5;
}

message UserId {
    string id = 1;
}

message Status {
    int32 Status = 1;
}
